# smieciarka

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  offers_highc_20260510_121143_c800_20260510_121143.json  offers_highc_20260510_121143_steps.csv  offers_highc_20260510_121143_steps.json  offers_multiuser_20260509_172905_c20_20260509_172905.json  offers_multiuser_20260509_172905_c40_20260509_172933.csv  offers_multiuser_20260509_172905_steps.json  offers_multiuser_20260509_173841_c160_20260509_173949.csv  offers_multiuser_20260509_173841_c160_20260509_173949.json  offers_multiuser_20260509_173841_c40_20260509_173858.csv  offers_multiuser_20260509_173841_c40_20260509_173858.json  offers_multiuser_20260509_173841_c80_20260509_173915.json  offers_ramp_20260509_170721_c10_20260509_170731.csv  offers_ramp_20260509_170721_c20_20260509_170741.json  offers_ramp_20260510_110754_c800_20260510_111106.json  offers_ramp_20260510_110754_steps.csv  offers_ramp_20260510_115955_c800_20260510_120027.json  offers_ramp_20260510_120436_c200_20260510_120436.csv  pyproject.toml  reservations_multiuser_20260509_182231_c20_20260509_182318.json  reservations_multiuser_20260509_182231_c40_20260509_182401.csv
app/: __init__.py  auth.py  database.py  main.py
app/routes/: __init__.py  auth.py  offers.py  profile.py  reservations.py
app/templates/: base.html  (+6 more)
migrations/: env.py
scripts/: bench_api.py  breakpoint_ramp.py  compare_indexes.py  manage_indexes.ps1  manage_indexes.sh  run_breakpoint.ps1  seed_offers.py  visualize_results.py
tests/: conftest.py  test_endpoints.py
(+100 files in other folders)
