[project]
name = "smieciarka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "fastapi-login>=1.10.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
]
